<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_play_name"
        android:hint="@string/NewPlaylistInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/songTextColor"
        android:textSize="35sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@color/songItemBG">

        <LinearLayout
            android:id="@+id/songs_to_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- buttons pressing loop -->
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_playlist_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:background="#4F2F68"
        android:backgroundTint="@color/gray"
        android:onClick="savePlaylistButton"
        android:text="@string/SavePlaylist" />

</LinearLayout>