...
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@color/songItemBG">

        <LinearLayout
            android:id="@+id/playlist_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- buttons pressing loop -->


        </LinearLayout>


    </ScrollView>
    <Button
        android:id="@+id/remove_playlist_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:background="#3d036b"
        android:backgroundTint="@color/gray"
...
