<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    android:orientation="vertical">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/dark"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Library"
        android:textColor="@color/libColor"
        android:textSize="40sp" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp">

        <AutoCompleteTextView
            android:id="@+id/actvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_input_bg"
            android:hint="@string/str_auto_search_hint"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp"
            android:text=""
            android:textColorHint="@color/white_be"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:src="@mipmap/ic_clear"
            app:layout_constraintBottom_toBottomOf="@id/actvSearch"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="@id/actvSearch"
            app:layout_constraintTop_toTopOf="@id/actvSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Songs -->
            <TextView
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/Songs"
                android:textColor="@color/songTextColor"
                android:textSize="25sp" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <!-- using linear layout to store multiple view
                     inside a Horizontal Scroll View -->
                <LinearLayout
                    android:id="@+id/song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/songItemBG"
                    android:orientation="horizontal">


                </LinearLayout>

            </HorizontalScrollView>

            <!-- Liked Songs -->
            <Button
                android:id="@+id/random_button"
                android:text="@string/LikedSongs"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:background="#3d036b"
                android:backgroundTint="@color/gray"
                android:onClick="likedButtonClick" />

            <!-- Playlists -->
            <TextView
                android:id="@+id/playlists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/Playlists"
                android:textColor="@color/songTextColor"
                android:textSize="25sp" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/songItemBG"
                android:scrollbars="none">

                <!-- using linear layout to store multiple view
                     inside a Horizontal Scroll View -->
                <LinearLayout
                    android:id="@+id/playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">


                </LinearLayout>

            </HorizontalScrollView>

            <!-- Add Playlist -->
            <Button
                android:id="@+id/add_playlist_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:background="#3d036b"
                android:backgroundTint="@color/gray"
                android:onClick="addPlaylistButton"
                android:text="@string/AddPlaylist" />

        </LinearLayout>


    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#E9D6EC"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="6dp"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/ivPlay"
            app:layout_constraintEnd_toStartOf="@id/ivLast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivPlay" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLast"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@id/ivPlay"
            app:layout_constraintEnd_toStartOf="@id/ivPlay"
            app:layout_constraintStart_toEndOf="@id/tvName"
            app:layout_constraintTop_toTopOf="@id/ivPlay"
            app:srcCompat="@mipmap/back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPlay"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/ivNext"
            app:layout_constraintStart_toEndOf="@id/ivLast"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/play" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNext"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/ivPlay"
            app:layout_constraintEnd_toStartOf="@id/ivReplay"
            app:layout_constraintStart_toEndOf="@id/ivPlay"
            app:layout_constraintTop_toTopOf="@id/ivPlay"
            app:srcCompat="@mipmap/next" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivReplay"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/ivPlay"
            app:layout_constraintEnd_toStartOf="@id/ivLike"
            app:layout_constraintStart_toEndOf="@id/ivNext"
            app:layout_constraintTop_toTopOf="@id/ivPlay"
            app:srcCompat="@mipmap/replay" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLike"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:onClick="buttonLikeClick"
            app:layout_constraintBottom_toBottomOf="@id/ivPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivReplay"
            app:layout_constraintTop_toTopOf="@id/ivPlay"
            app:srcCompat="@mipmap/openheart" />

        <ProgressBar
            android:id="@+id/pbProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:max="100"
            android:minHeight="3dp"
            android:progress="0"
            android:progressDrawable="@drawable/layer_progress_bar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>