<resources>
    <string name="app_name">MusicLoud</string>
    <string name="str_replay_msg">Music is playing, whether to play from the beginning ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_txt">Login</string>
    <string name="register_btn">Register</string>
    <string name="register_txt">Register</string>
...
