<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_background">


    <TextView
        android:id="@+id/RegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/register_txt"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="207dp"
        android:layout_height="55dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/purple_500"
        android:text="@string/register_btn_txt"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="257dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/password_txt"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:hint="@string/user_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"

        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/full_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_person_24"
        android:hint="@string/full_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:textInputLayoutFocusedRectEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/user_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>